# package/handler/services.go
@@ -154,7 +154,6 @@ func (h *Handler) UpdateService(ctx *gin.Context) {
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /api/service/get [GET]
-//@Security ApiKeyAuth
 func (h *Handler) GetServiceById(ctx *gin.Context) {
 	logrus := h.logrus
 	id := ctx.Query("id")
